# candidate-match/src/main/kotlin/no/cloudberries/candidatematch/controllers/health/HealthController.kt
@@ -9,7 +9,7 @@ import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
-@RequestMapping("/api/health")
+@RequestMapping("/health")
 class HealthController(
     val healthService: HealthService
 ) {
